@startuml

' Copyright (c) 2026 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' <https://www.apache.org/licenses/LICENSE-2.0>
'
' SPDX-License-Identifier: Apache-2.0

skinparam backgroundColor #FAFAFA
skinparam defaultFontSize 12
skinparam ArrowColor #333333
skinparam packageStyle rectangle
skinparam defaultTextAlignment center

interface Runtime {
  type FieldSubscriber<T: CommData>
  type FieldPublisher<T: CommData>
  type FieldGetCaller<T: CommData>
  type FieldSetCaller<T: CommData>
  type MethodReturnSample<T: CommData>
  ---
  + find_service()
  + producer_builder()
}

interface "FieldSubscriber<T, R>" as FieldSubscriber {
  ---
  ' Marker supertrait of Subscriber<T, R>
  ' Adds the constraint: Subscription associated type must be FieldSubscription<T, R>
  ' All subscription APIs (new, subscribe) come from Subscriber<T, R>
  ' Generated by interface! on the consumer struct for WithNotifier fields:
  '   {name}: R::FieldSubscriber<T>
  ' Consumer calls .subscribe(max_num_samples) to receive field-value-change notifications
}

interface "Subscriber<T, R>" as Subscriber {
  type Subscription: FieldSubscription<T, R>
  ---
  + new(identifier, instance_info) -> Result<Self>
  + subscribe(self, max_num_samples: usize) -> Result<Self::Subscription>
}

interface "FieldSubscription<T, R>" as FieldSubscription {
  ---
  + get_num_new_samples_available() -> Result<usize>
  + get_free_sample_count() -> Result<usize>
  ---
  ' Extends Subscription<T, R> which provides:
  '   try_receive, receive, cancellable_receive, to_stream
  ' get_num_new_samples_available(): how many fresh samples try_receive would return
  ' get_free_sample_count(): remaining capacity before the subscription buffer overflows
}

interface "Subscription<T, R>" as Subscription {
  type Subscriber: Subscriber<T, R>
  type Sample<'a>: Sample<T>
  ---
  + unsubscribe(self) -> Self::Subscriber
  + try_receive(scratch, max_samples) -> Result<usize>
  + receive(scratch, new_samples, max_samples) -> impl Future<...>
  + cancellable_receive(scratch, new_samples, max_samples, cancel) -> impl Future<...>
  + to_stream(scratch, max_samples) -> impl Stream<...>
}

interface "FieldPublisher<T, R>" as FieldPublisher {
  type SampleMaybeUninit<'a>: SampleMaybeUninit<T, SampleMut: FieldSampleMut<T>>
  ---
  + new(identifier, instance_info) -> Result<Self>
  + allocate() -> Result<Self::SampleMaybeUninit<'_>>
  + update(value: T) -> Result<()>
  + register_set_handler(callback: impl Fn(T) + Send + 'static)
  + register_get_handler(callback: impl Fn() -> T + Send + 'static)
  ---
  ' update() is the copy-path write; for zero-copy use allocate() then SampleMaybeUninit::write()
  ' register_set_handler: invoked by middleware when consumer calls set_{name}()
  '   - required on producer init() chain before offer() (type-state: HandlerNotSet -> HandlerSet)
  ' register_get_handler: invoked by middleware when consumer calls get_{name}()
  '   - optional; default returns the last update()d value
}

interface "SampleMaybeUninit<T>" as SampleMaybeUninit {
  type SampleMut: FieldSampleMut<T>
  ---
  + write(val: T) -> Self::SampleMut
  + assume_init(self) -> Self::SampleMut  [unsafe]
  ---
  ' Zero-copy write path: allocate() returns an uninitialised slot
  ' write() initialises the slot and returns a FieldSampleMut
  ' Mirrors MethodInArgMaybeUninit<T> in the Method design
}

interface "FieldSampleMut<T>" as FieldSampleMut {
  ---
  + update(self) -> Result<()>
  ---
  ' Extends SampleMut<T>: provides DerefMut<Target = T> 
  ' update() commits the written value to the field — completes the zero-copy publish
  ' Mirrors EventSampleMut<T>::send() in the Event design
}

interface "SampleMut<T>" as SampleMut {
  ---
  ' DerefMut<Target = T> 
  ' Base mutable reference to a shared-memory slot
}

interface "FieldGetCaller<T, R>" as FieldGetCaller {
  ---
  ' Bounded by MethodCaller<(), T, R>
  ' Distinct associated type on Runtime so runtimes can route to a specific FFI Getter
  ' Consumer struct field generated by interface! for WithGetter fields:
  '   {name}_get: R::FieldGetCaller<T>
  ' Async convenience wrapper also generated:
  '   get_{name}() -> impl Future<Output = Result<R::MethodReturnSample<T>>>
  '     calls invoke_with_copy(()) on the underlying MethodCaller
}

interface "FieldSetCaller<T, R>" as FieldSetCaller {
  ---
  ' Bounded by MethodCaller<(T,), T, R>
  ' Distinct associated type on Runtime so runtimes can route to a specific FFI Setter
  ' Consumer struct field generated by interface! for WithSetter fields:
  '   {name}_set: R::FieldSetCaller<T>
  ' Async convenience wrapper also generated:
  '   set_{name}(val: T) -> impl Future<Output = Result<R::MethodReturnSample<T>>>
  '     calls invoke_with_copy((val,)) on the underlying MethodCaller
}

interface "MethodCaller<Args, Return, R>" as MethodCaller {
  ---
  + new(method_name, instance_info) -> Result<Self>
  + invoke_with_copy(args: Args) -> impl Future<Output = Result<R::MethodReturnSample<Return>>>
  + allocate() -> Result<Args::UninitTuple>
  + invoke_zero_copy(ptrs: Args::PtrTuple) -> impl Future<Output = Result<R::MethodReturnSample<Return>>>
  ---
  ' FieldGetCaller<T>: Args = (),    Return = T
  ' FieldSetCaller<T>: Args = (T,),  Return = T
  ' Both reuse the full Method call infrastructure (copy path + future + MethodReturnSample)
}

interface "MethodReturnSample<T>" as MethodReturnSample {
  ---
  ' Deref<Target = T>
  ' Returned by get_{name}() and set_{name}() wrapper calls
  ' The confirmed field value from the producer is accessed via Deref
  ' Same associated type as used by Methods — shared infrastructure
  ' Runtime concrete types: LolaMethodReturnSample<T>, MockMethodReturnSample<T>
}


Runtime --> FieldSubscriber : defines as\nassociated type
Runtime --> FieldPublisher : defines as\nassociated type
Runtime --> FieldGetCaller : defines as\nassociated type\n(bounded by MethodCaller<(),T>)
Runtime --> FieldSetCaller : defines as\nassociated type\n(bounded by MethodCaller<(T,),T>)
Runtime --> MethodReturnSample : defines as\nassociated type

FieldSubscriber --|> Subscriber : extends\n(marker supertrait)
FieldSubscription --|> Subscription : extends

Subscriber --> FieldSubscription : Subscription\nassociated type

FieldPublisher --> SampleMaybeUninit : allocate()\nproduces
SampleMaybeUninit --> FieldSampleMut : write()\nreturns
FieldSampleMut --|> SampleMut : extends

FieldGetCaller --|> MethodCaller : bounded by\nMethodCaller<(), T, R>
FieldSetCaller --|> MethodCaller : bounded by\nMethodCaller<(T,), T, R>
MethodCaller --> MethodReturnSample : invoke returns

@enduml
